<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:orientation="vertical"
    android:background="@drawable/bg_snow_round">

    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivEventMedia"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_80sdp"
            android:padding="@dimen/_10sdp"
            app:srcCompat="@drawable/event_group"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toEndOf="@id/ivEventMedia"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="2"
            android:textColor="@color/dim_black"
            android:text="@string/event_name"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tvEventDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEventName"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/event_desc"
            android:maxLines="2"
            android:textColor="@color/dim_black2"
            android:layout_toEndOf="@id/ivEventMedia"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/tvEventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_below="@+id/tvEventDesc"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_toEndOf="@id/ivEventMedia"
            android:gravity="start"
            android:text="@string/event_date"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:id="@+id/tvEventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_below="@+id/tvEventDesc"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toEndOf="@id/tvEventDate"
            android:text="@string/event_time"
            android:textSize="@dimen/_9ssp" />

    </RelativeLayout>

</FrameLayout>