<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="0dp"
        android:layout_height="@dimen/_150sdp"
        android:background="@drawable/bg_bright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.35" />

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/hello"
        android:gravity="start"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/user_name"
        android:maxLines="1"
        android:gravity="start"
        android:textStyle="bold"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/tvHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/llUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_45sdp"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_13sdp"
            style="@style/btnNext"
            android:text="@string/choose_event"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <Button
            android:id="@+id/btGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_13sdp"
            style="@style/btnNext"
            android:text="@string/choose_guest"
            android:textAllCaps="false"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivCompany"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:srcCompat="@drawable/img_suitmedia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llUser"
        tools:layout_editor_absoluteY="17dp"
        android:contentDescription="@string/app_desc" />

    <RelativeLayout
        android:id="@+id/rlUser"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.35"
        android:background="@drawable/img_bg_bottom"
        android:gravity="center" />

</androidx.constraintlayout.widget.ConstraintLayout>