<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:background="@color/white_smoke"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_bright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.35" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.35"
        android:background="@color/transparent_orange" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvAppDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:text="@string/app_desc"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="normal"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:padding="@dimen/_20sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvAppDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_snow_round">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_110sdp"
            app:srcCompat="@drawable/img_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="17dp" />

        <EditText
            android:id="@+id/etInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_name"
            android:textColorHint="@color/dim_gray"
            android:textColor="@color/dim_black"
            android:importantForAutofill="no"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar"/>

        <EditText
            android:id="@+id/etInputPalindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_palindrome"
            android:textColorHint="@color/dim_gray"
            android:textColor="@color/dim_black"
            android:importantForAutofill="no"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etInputName"/>

        <Button
            android:id="@+id/btNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            style="@style/btnNext"
            android:text="@string/next"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btCkPalindrome"
            app:layout_constraintTop_toBottomOf="@+id/etInputPalindrome"/>

        <Button
            android:id="@+id/btCkPalindrome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            style="@style/btnNext"
            android:text="@string/check"
            android:textAllCaps="false"
            android:paddingStart="@dimen/_30sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etInputPalindrome"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvCopyRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_25sdp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="normal"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>